--- a/index.html
+++ b/index.html
@@ -101,9 +101,30 @@
         </div>
     </header>
     
+    <section class="flex flex-col-reverse md:flex-row gap-10 items-center py-5 w-11/12 mx-auto">
+      <div class="content flex-1 text-center md:text-left">
+        <h2 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy!!</h2>
+        <p class="font-Bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
+      </div>
+      <div class="image flex-1">
+        <img src="./assets/hero-student.png" alt="">
+      </div>
+    </section>
+
     <section>
+      <h2 class="text-4xl font-bold mb-8 text-center">
+        <span class="text-sky-400">Let's</span> Learn Vocabulary
+      </h2>
+      <div id="lvl-container" class="flex gap-5 flex-wrap justify-center">
+
+      </div>
+    </section>
+
+    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto md:grid md:grid-cols-2 lg:grid lg:grid-cols-3 gap-5 mt-10">
       
     </section>
 
+
+    <script src="./Script/index.js"></script>
   </body>
 </html>
