added words and details

--- a/index.html
+++ b/index.html
@@ -119,11 +119,44 @@
 
       </div>
     </section>
-
-    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto md:grid md:grid-cols-2 lg:grid lg:grid-cols-3 gap-5 mt-10">
       
+    <section class="flex justify-center mt-10">
+      <div class="join">
+      <div>
+      <label class="input validator join-item ">
+      <input class="" id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+      </label>
+      </div>
+      <button id="btn-search" class="btn btn-primary join-item">Search</button>
+      </div>
     </section>
 
+    <section id="spinner" class="flex justify-center items-cente py-10 hidden">
+      <span class="loading loading-bars loading-xl"></span>
+    </section>
+
+    <section id="word-container" class="bg-gray-100 p-5 w-11/12 mx-auto md:grid md:grid-cols-2 lg:grid lg:grid-cols-3 gap-5 mt-10">
+      <div class="text-center col-span-full py-10 space-y-6 font-Bangla">
+        <p class="text-xl font-medium text-gray-400">আপনি এখনো কোন Lesson Select করেন নি</p>
+        <h2 class="text-4xl font-bold">একটি Lesson Select করুন।</h2>
+      </div>
+    </section>
+
+    <!-- Open the modal using ID.showModal() method -->
+
+    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div id="details-container" class="space-y-5">
+          
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
 
     <script src="./Script/index.js"></script>
   </body>
