added FAQ and Footer section

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
       </div>
     </section>
 
-    <section id="spinner" class="flex justify-center items-cente py-10 hidden">
+    <section id="spinner" class="hidden justify-center items-center py-10">
       <span class="loading loading-bars loading-xl"></span>
     </section>
 
-    <section id="word-container" class="bg-gray-100 p-5 w-11/12 mx-auto md:grid md:grid-cols-2 lg:grid lg:grid-cols-3 gap-5 mt-10">
+    <section id="word-container" class="bg-gray-100 p-5 w-11/12 mx-auto md:grid md:grid-cols-2 lg:grid lg:grid-cols-3 gap-5 mt-10 rounded-2xl">
       <div class="text-center col-span-full py-10 space-y-6 font-Bangla">
         <p class="text-xl font-medium text-gray-400">আপনি এখনো কোন Lesson Select করেন নি</p>
         <h2 class="text-4xl font-bold">একটি Lesson Select করুন।</h2>
@@ -157,6 +157,51 @@
         </div>
       </div>
     </dialog>
+
+    <section class="p-5 w-11/12 mx-auto mt-20 font-semibold text-sm">
+       <h1 class="font-bold text-center text-lg lg:text-3xl mb-10"><span class="text-sky-400">Frequently</span> Asked Questions</h1>
+       <div class="bg-gray-100 rounded-xl p-5 flex justify-between items-center">
+        <h2>1. How can I start learning English on this website?</h2>
+        <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="bg-gray-100 rounded-xl p-5 flex justify-between items-center mt-5">
+        <h2>2. Is this website free to use?</h2>
+        <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="bg-gray-100 rounded-xl p-5 flex justify-between items-center mt-5">
+        <h2>3. Do I need to create an account?</h2>
+        <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="bg-gray-100 rounded-xl p-5 flex justify-between items-center mt-5">
+        <h2>4. How can I build my English vocabulary?</h2>
+        <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="bg-gray-100 rounded-xl p-5 flex justify-between items-center mt-5">
+        <h2>5. Do you offer certificates for completed courses?</h2>
+        <i class="fa-solid fa-plus"></i>
+      </div>
+    </section>
+
+
+    <footer class="h-[200px] border-t-2 border-red-100 flex justify-between items-center mt-25 px-1 md:px-5">
+      <div class="">
+        <div class="flex items-center gap-1 mb-3">
+            <span class="font-bold">English</span>
+            <img src="./assets/logo.png" alt="" />
+            <span class="font-Bangla font-semibold">জানালা</span>
+        </div>
+        <h2 class="font-Bangla font-semibold">ইংরেজি শিখুন সহজে</h2>
+        <p class="text-[10px] md:text-sm">Providing ED-Tech Applications since 2025</p>
+      </div>
+      <div class="space-y-2 ml-3 p-3">
+        <h2 class="text-[12px] font-semibold text-gray-400">FOLLOW US</h2>
+        <div class="flex items-center gap-3">
+          <a href=""><img src="./assets/fb-thumb.png" alt=""></a>
+          <a href=""><img src="./assets/youtube-thumb.png" alt=""></a>
+          <a href=""><img src="./assets/instagram-thumb.png" alt=""></a>
+        </div>
+      </div>
+    </footer>
 
     <script src="./Script/index.js"></script>
   </body>
